RESOLVED FIXED249393
Fix the build when `nw_connection_privacy_stance_failed_unreachable` is available
https://bugs.webkit.org/show_bug.cgi?id=249393
Summary Fix the build when `nw_connection_privacy_stance_failed_unreachable` is avail...
Wenson Hsieh
Reported 2022-12-15 08:07:04 PST
.
Attachments
Wenson Hsieh
Comment 1 2022-12-15 08:15:10 PST
EWS
Comment 2 2022-12-15 08:54:09 PST
Committed 257923@main (eecd46d1010c): <https://commits.webkit.org/257923@main> Reviewed commits have been landed. Closing PR #7689 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-12-15 08:55:18 PST
Note You need to log in before you can comment on or make changes to this bug.