Cherry-pick eecd46d1010c. rdar://problem/103389902

Fix the build when `nw_connection_privacy_stance_failed_unreachable` is available
    https://bugs.webkit.org/show_bug.cgi?id=249393

    Reviewed by Alexey Proskuryakov.

    * Source/WebCore/platform/network/NetworkLoadMetrics.h:

    Add support for `PrivacyStance::FailedUnreachable`, which corresponds to the new
    `nw_connection_privacy_stance_failed_unreachable` enum type exposed via the Network framework.

    * Source/WebCore/platform/network/cocoa/WebCoreNSURLSession.mm:
    (-[WebCoreNSURLSessionTaskTransactionMetrics _privacyStance]):
    * Source/WebKit/NetworkProcess/cocoa/NetworkSessionCocoa.mm:
    (toPrivacyStance):
    (privacyStanceToString):

    Canonical link: https://commits.webkit.org/257923@main

Canonical link: https://commits.webkit.org/257698.10@safari-7615.1.15-branch